
2022-10-11  Ron Norman <rjn@inglenet.com>

	* Return the process id that is blocking a 
	  record/file lock in FCD3 field FCD-SESSION-ID.

2022-09-08  Simon Sobisch <simonsobisch@gnu.org>

	* fbdb.c: manual merge of fileio.c from 2019-08-25 and 2021-01-08
	  including clean-up and bugfix of that
	* fbdb.c: for retry lock: only set loc object dbt once,
	  not in each iteration

2022-07-25  Simon Sobisch <simonsobisch@gnu.org>

	* common.h (cob_file_routines, cob_file_operation): moved defines to enum
	* common.h (cob_file), fileio.c: adjusted to use new enums
	* fileio (not_available_funcs): new io function set, returning status 91
	* fileio (get_io_ptr): if function is not available change io functions
	  to COB_IO_NOT_AVAIL to prevent follow-up SIGSEGVs and provide reasonable
	  return value to the program
	* common.c (cob_add_exception), coblocal.h: new function to activate more
	  than one exception at the same time
	* common.c (cob_get_last_exception_name): adjusted to care for
	  cob_add_exception
	* screenio.c (handle_status): pass type of statement to raise
	  either COB_EC_IMP_ACCEPT or COB_EC_IMP_DISPLAY
	* screenio.c (handle_status, cob_set_crt3_status) [!COB_GEN_SCREENIO]:
	  unconditionally defined those functions and finally return error
	  status and nonfatal exception along with a warning on accept if the
	  runtime is not configured for extended screenio
	* mlio.c (set_xml_exception, set_xml_code, set_json_exception,
	  set_json_code): unconditionally defined those functions and return
	  error status and fatal exception (no runtime exit) along with a
	  warning if the runtime is not configured for XML / JSON

2022-07-04  Ron Norman <rjn@inglenet.com>

	* Updated Copyright date to include 2022
	* Reverted back to using D-ISAM and V-ISAM names

2022-06-21  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: always build INDEXED handlers as separate libraries
	* libcobvc.c, libcobvb.c, libcobci.c, libcobdi.c, fileio.h: simplified