@@ -1,8 +1,11 @@
 
 2022-10-11  Ron Norman <rjn@inglenet.com>
 
-	* Return the process id that is blocking a 
+	* fextfh.c: Return the process id that is blocking a 
 	  record/file lock in FCD3 field FCD-SESSION-ID.
+	* fextfh.c: Was reallocing the key field for RELATIVE files
+	           The code that doing now only executes if there 
+			   wsa no RELATAIVE KEY defined at all
 
 2022-09-08  Simon Sobisch <simonsobisch@gnu.org>
 
